--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <span class="nav-title"> GitHub:</span>
   
       <a
-        href="https://github.com/DiegoVera12/08MBID--Visualizacion-de-Datos.git"
+        href="https://github.com/DiegoVera12/Python-D3plus"
         target="_blank"
       >
-        https://github.com/DiegoVera12/08MBID--Visualizacion-de-Datos.git
+      https://github.com/DiegoVera12/Python-D3plus
       </a>
     </div>
     <div class="container_act3">
@@ -42,11 +42,11 @@
       >
   </div>
     
-    <h2>Grafico en d3plus Barras</h2>
+    <h2>Grafico en D3plus Barras</h2>
     <div id="viz1"></div>
     <h2>Grafico en barras</h2>
     <div id="viz2"></div>
-    <h2>Caja y Bigotes</h2>
+    <h2>Ampliación de la practica - Caja y Bigotes</h2>
     <div id="viz3"></div>
   </div>
 </div>
